--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,7 @@
+@import './_env';
+
+
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,8 +9,6 @@
 }
 
 html > body {
-    $padding: 1em;
-
     display: flex;
     min-height: 100vh;
     flex-direction: column;
@@ -27,11 +29,11 @@ html > body {
                 top: 0;
                 z-index: 100;
                 height: 100vh;
-                color: white;
                 position: fixed;
                 min-width: 320px;
                 overflow: hidden;
-                background: white;
+                color: $color-inverse;
+                background: $background-color-inverse;
                 background-image: linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, .9));
 
                 &:first-child {
