--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,6 +8,17 @@
     margin: 0;
 
     font-family: 'Noto Serif SC';
+    text-align: justify;
+    line-height: 1.5;
+    font-size: 15px;
+
+    @media ( min-width: 768px ) {
+        font-size: 18px;
+    }
+
+    @media ( min-width: 1366px ) {
+        font-size: 20px;
+    }
 }
 
 html > body {
