change env value

--- a/scss/__env.scss
+++ b/scss/__env.scss
@@ -5,5 +5,5 @@ $background-image: none;
 $background-color: transparent;
 
 $color-inverse: white;
-$background-color-inverse: white;
-$background-image-inverse: linear-gradient(rgba(0, 0, 0, .9), rgba(0, 0, 0, .9));
+$background-color-inverse: black;
+$background-image-inverse: linear-gradient(rgba(22, 22, 165, .9), rgba(22, 22, 165, .9));
