--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,48 @@
 html > body > footer {
-    color: $color-inverse;
-    background: $background-color-inverse;
+    display: flex;
+    position: relative;
+    flex-direction: column;
     background-image: $background-image-inverse;
+
+    @include apply-absolute-color( $color-inverse );
+
+    @media ( min-width: 768px ) {
+        flex-direction: row;
+    }
+
+    &::before {
+        top: 0;
+        left: 0;
+        z-index: -1;
+        width: 100%;
+        content: '';
+        opacity: .9;
+        height: 100%;
+        position: absolute;
+        background-image: url( '../img/242.jpg' );
+    }
+
+    > div {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+
+        @media ( max-width: 768px ) {
+            padding-left: 1em;
+            padding-right: 1em;
+
+            &:not(:first-of-type) {
+                margin-top: 1em;
+            }
+        }
+
+        > div {
+            display: flex;
+            flex-direction: column;
+
+            > * {
+                font-family: 'Signika';
+            }
+        }
+    }
 }
