--- a/scss/__widget.parallax.scss
+++ b/scss/__widget.parallax.scss
@@ -8,9 +8,10 @@
         top: 0;
         margin: 0;
         padding: 0;
-        position: sticky;
         min-height: 100vh;
         background-color: white;
+        position: -webkit-sticky;
+        position: sticky;
 
         &:nth-child(2n) {
             top: -5em;
