--- a/scss/__widget.parallax.scss
+++ b/scss/__widget.parallax.scss
@@ -2,28 +2,17 @@
     margin: 0;
     padding: 0;
     display: flex;
+    perspective: 1px;
     flex-direction: column;
 
     > :nth-child( n ) {
         top: 0;
         margin: 0;
         padding: 0;
-        min-height: 100vh;
-        position: -webkit-sticky;
-        position: sticky;
+        flex-direction: column;
+        align-items:flex-start;
+        display: flex !important;
 
-        &:nth-child(2n) {
-            top: -5em;
-        }
-
-        &:not(:first-child) {
-            box-shadow: 0 -1em 2em rgba(0, 0, 0, .3);
-        }
-
-        @for $i from 0 through 4 {
-            &:nth-child(#{$i + 1}) {
-                top: #{-5em * (1 + $i % 4)};
-            }
-        }
     }
 }
+
