--- a/scss/__widget.parallax.scss
+++ b/scss/__widget.parallax.scss
@@ -9,10 +9,15 @@
         top: 0;
         margin: 0;
         padding: 0;
+        min-height: 100%;
         flex-direction: column;
         align-items:flex-start;
         display: flex !important;
 
     }
-}
 
+    &-full {
+        @extend .parallax;
+        min-height: 100vh;
+    }
+}
