FIX improve navber

--- a/scss/__widget.navbar.scss
+++ b/scss/__widget.navbar.scss
@@ -59,9 +59,10 @@
 }
 
 html > body > nav {
-    top: 0;
-    z-index: 999;
     @extend .navbar;
-    position: -webkit-sticky;
-    position: sticky;
+
+    top: 0;
+    width: 100%;
+    z-index: 999;
+    position: fixed;
 }
