--- a/scss/__widget.parallax.scss
+++ b/scss/__widget.parallax.scss
@@ -9,7 +9,6 @@
         top: 0;
         margin: 0;
         padding: 0;
-        min-height: 100%;
         flex-direction: column;
         align-items:flex-start;
         display: flex !important;
@@ -18,6 +17,15 @@
 
     &-full {
         @extend .parallax;
-        min-height: 100vh;
+
+        overflow-x: hidden;
+
+        > :nth-child( n ) {
+            min-height: 100vh;
+
+            &.parallaxed-fix {
+                height: 100vh;
+            }
+        }
     }
 }
