restores navbar stickyness

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,4 @@
+@import './_compatibility';
 @import './_selector';
 @import './_env';
 
@@ -72,6 +73,7 @@ html > body {
         }
     }
 }
+
 
 
 @import './_widget.navbar';
